# Synapse-Graph

./: .gitignore  README.md  TRACEABILITY_IMPLEMENTATION.md  aae_sdk.py  architecture.html  demo_server.py  explain.md  first_frame.html  form.md  graph.mov  index.html  ingestor_server.py  last_frame.html  openmetadata_ingestor.py  openmetadata_usage.html  project_status.html  run_demo_test.py  tech_stack.html  tour.js  video_diagram.html  video_narration.md  video_narration_demo.md  video_narration_frontend.md  video_scene.html  video_script.md
.github/workflows/: ci.yml  deploy-pages.yml
artifacts/explain/: inf-00569ec1-cee0-4e44-a25c-b9c3b9720769.json  inf-03ecb628-514a-4df8-bdbc-46ad8e9d2859.json  inf-04fa87ac-6885-43b0-9aa9-21b4dadeed3b.json  inf-0c920dfe-42c6-4902-9a09-20545da37732.json  inf-0d6f918e-73eb-473d-8750-12b0abfb994f.json  inf-1c52f25b-77f1-41d1-b201-69fef717c876.json  inf-224b8a61-d0ac-4a9f-87ff-71bf9cf04145.json  inf-22aa7829-1d73-4bc5-9620-e11917cbdbaa.json  inf-262981ff-a83e-48ac-84c1-354941c0887c.json  inf-29331b38-872e-4033-a770-055e009dee06.json  inf-313f6b56-21ae-4ef2-901f-560c26fe3ede.json  inf-34a58931-783d-40d5-ad72-fbd3851ae455.json  (+59 more)
backend/: README.md  pyproject.toml
backend/app/: __init__.py  inference.py  main.py  om_client.py
backend/app/tests/: test_redaction.py
backend/synapse_graph_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_discover_quarantine_integration.py  test_quarantine.py
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+83 files in other folders)
