[project]
name = "synapse-graph-backend"
version = "0.1.0"
description = "Neural proxy backend for Synapse-Graph"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "cachetools>=5.3.0,<6.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "openmetadata-ingestion>=1.12.0,<1.13.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "torch>=2.4.0,<3.0.0",
  "transformers>=4.46.0,<5.0.0",
  "accelerate>=1.1.0,<2.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
